# wesl-rs

./: .editorconfig  .gitattributes  .gitmodules  .markdownlint.jsonc  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml  tombi.toml  typos.toml
crates/reify/: Cargo.toml
crates/reify-derive/: Cargo.toml
crates/reify-derive/src/: lib.rs
crates/reify/src/: lib.rs
crates/tokrepr/: Cargo.toml  README.md
crates/tokrepr-derive/: Cargo.toml
crates/tokrepr-derive/src/: lib.rs
crates/tokrepr/src/: lib.rs
crates/wesl/: Cargo.toml  README.md
crates/wesl-c/: Cargo.toml  README.md  build.rs
crates/wesl-c/examples/: .gitignore  build_examples.bat  build_examples.sh  simple.c
crates/wesl-c/include/: wesl.h
crates/wesl-c/src/: lib.rs
crates/wesl-cli/: Cargo.toml  README.md
crates/wesl-cli/src/: main.rs
crates/wesl-macros/: Cargo.toml
crates/wesl-macros/src/: lib.rs  query_macro.rs  quote_macro.rs  reify.rs  wesl_macro.rs
crates/wesl-quote/: Cargo.toml  README.md
crates/wesl-quote/src/: lib.rs
crates/wesl-test/: Cargo.toml
crates/wesl-test/bevy/: README.md  animate_shader.wgsl  array_texture.wgsl  automatic_instancing.wgsl  bindless_material.wgsl  cubemap_unlit.wgsl  custom_clustered_decal.wgsl  custom_gltf_2d.wgsl  custom_material.wesl  custom_material.wgsl  custom_material_2d.wgsl  custom_material_screenspace_texture.wgsl  custom_stencil.wgsl  custom_ui_material.wgsl  custom_vertex_attribute.wgsl  extended_material.wgsl  fallback_image_test.wgsl  game_of_life.wgsl  instancing.wgsl  irradiance_volume_voxel_visualization.wgsl  line_material.wgsl  post_processing.wgsl  shader_defs.wgsl  show_prepass.wgsl  specialized_mesh_pipeline.wgsl  storage_buffer.wgsl  texture_binding_array.wgsl  tonemapping_test_patterns.wgsl  water_material.wgsl
crates/wesl-test/spec-tests/: circular.json  ctor_coverage.wgsl  dead-code.json  idents.json  imports.json  lit-type-inference.json  literals.json  types.json
crates/wesl-test/src/: lib.rs  schemas.rs
crates/wesl-test/tests/: testsuite.rs
crates/wesl-test/unity_web_research/: README.md
crates/wesl-test/unity_web_research/boat_attack/: unity_webgpu_000001D9CDD5C6D0.vs.wgsl  unity_webgpu_000001D9D2114040.fs.wgsl  unity_webgpu_000001F972AC3D10.vs.wgsl  unity_webgpu_0000026E57303490.fs.wgsl  unity_webgpu_00000277907BA020.fs.wgsl
crates/wesl-test/webgpu-samples/: LICENSE.txt  README.md  common.wgsl  gltf.wgsl
crates/wesl-test/wesl-testsuite/: fetch.sh
crates/wesl-test/wgpu/: README.md
crates/wesl-test/wgpu/in/: 7048-multiple-dynamic-1.wgsl  7048-multiple-dynamic-3.wgsl  abstract-types-builtins.wgsl  abstract-types-function-calls.wgsl  abstract-types-let.wgsl  abstract-types-operators.wgsl  abstract-types-return.wgsl  abstract-types-var.wgsl  access.wgsl  barycentrics.wgsl  bits.wgsl  const-exprs.wgsl  const_assert.wgsl  control-flow.wgsl  conversion-float-to-int-no-f64.wgsl  conversion-float-to-int.wgsl  diagnostic-filter.wgsl  extra.wgsl  f16.wgsl  f64.wgsl  image.wgsl  immediates.wgsl  int64.wgsl  math-functions.wgsl  msl-vpt-formats-x1.wgsl  msl-vpt-formats-x2.wgsl  msl-vpt-formats-x3.wgsl  msl-vpt-formats-x4.wgsl  must-use.wgsl  operators.wgsl  overrides.wgsl  pointer-function-arg-restrict.wgsl  pointer-function-arg.wgsl  pointers.wgsl  ray-query.wgsl
crates/wesl-web/: Cargo.toml  README.md
crates/wesl-web/src/: lib.rs
crates/wesl/src/: builtin.rs  condcomp.rs  error.rs  idents.rs  import.rs  lib.rs  lower.rs  mangle.rs  package.rs  resolve.rs  sourcemap.rs  strip.rs  syntax_util.rs  to_naga.rs  toml_cfg.rs  visit.rs  wesl_toml.rs
crates/wesl/src/eval/: attrs.rs  builtin.rs  constant.rs  conv.rs  display.rs  error.rs  eval.rs  exec.rs  instance.rs  lower.rs  mem.rs  mod.rs  ops.rs  prelude.rs  prelude.wgsl  to_expr.rs  ty.rs
crates/wesl/src/generics/: mod.rs
crates/wesl/src/validate/: mod.rs
crates/wesl/tests/fixtures/wesl_toml/conflict/shaders/: main.wesl  main.wgsl
crates/wgsl-parse/: Cargo.toml  README.md  build.rs
crates/wgsl-parse/src/: error.rs  lexer.rs  lib.rs  parser.rs  parser_support.rs  reify.rs  span.rs  syntax.rs  syntax_display.rs  syntax_impl.rs  tokrepr.rs  wgsl.lalrpop  wgsl_recognize.lalrpop
crates/wgsl-parse/src/lelwel/: cst_builder.rs  from_cst.rs  lexer.rs  mod.rs  parser.rs  syntax_kind.rs  tests.rs
crates/wgsl-parse/src/lelwel/tests/: expression.rs
crates/wgsl-syntax/: Cargo.toml
crates/wgsl-syntax/src/: lib.rs
crates/wgsl-types/: Cargo.toml  README.md
crates/wgsl-types/src/: conv.rs  display.rs  enums.rs  error.rs  idents.rs  inst.rs  lib.rs  mem.rs  mod.rs  ops.rs  syntax.rs  tplt.rs  ty.rs
crates/wgsl-types/src/builtin/: call.rs  call_ty.rs  ctor.rs  mod.rs  ops.rs  ops_ty.rs
examples/buildrs_wesl/: Cargo.toml  README.md  build.rs
examples/buildrs_wesl/src/: main.rs
examples/dependency-resolution/: Cargo.toml  README.md
examples/dependency-resolution/a/: Cargo.toml  build.rs
examples/dependency-resolution/a/src/: lib.rs  main.wesl
examples/dependency-resolution/b/: Cargo.toml  build.rs
examples/dependency-resolution/b/src/: lib.rs
examples/dependency-resolution/c1/: Cargo.toml
examples/dependency-resolution/c1/src/: lib.rs  main.wesl
examples/dependency-resolution/c2/: Cargo.toml  build.rs
examples/dependency-resolution/c2/src/: lib.rs  main.wesl
examples/dependency-resolution/d1/: Cargo.toml  build.rs
examples/dependency-resolution/d1/src/: lib.rs
examples/dependency-resolution/d2/: Cargo.toml
examples/dependency-resolution/d2/src/: main.wesl
examples/dependency-resolution/src/: main.rs  main.wesl
examples/random_wgsl/: Cargo.toml  build.rs
examples/random_wgsl/src/: lib.rs
examples/random_wgsl/src/shaders/: hash.wesl  random.wesl
examples/random_wgsl/src/shaders/noise/: perlin.wesl  value.wesl
examples/runtime_wesl/: Cargo.toml  README.md
examples/runtime_wesl/src/: main.rs
examples/runtime_wesl/src/shaders/: main.wesl
examples/wesl-consumer/: Cargo.toml  README.md  build.rs
examples/wesl-consumer/src/: main.rs
examples/wesl-consumer/src/shaders/: main.wesl
src/: main.rs
(+40 files in other folders)
