[workspace]
resolver = "3"
members = [
  "crates/tokrepr",
  "crates/tokrepr-derive",
  "crates/wesl",
  "crates/wesl-c",
  "crates/wesl-cli",
  "crates/wesl-macros",
  "crates/wesl-test",
  "crates/wesl-web",
  "crates/wgsl-parse",
  "crates/wgsl-types",
  "examples/random_wgsl",
  "examples/wesl-consumer",
]

[workspace.package]
version = "0.2.0"
authors = ["Mathis Brossier <mathis.brossier@gmail.com>", "WESL Contributors"]
edition = "2024"
rust-version = "1.87.0"
repository = "https://github.com/wgsl-tooling-wg/wesl-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokrepr = { version = "0.1.0", path = "crates/tokrepr" }
tokrepr-derive = { version = "0.1.0", path = "crates/tokrepr-derive" }
wesl = { version = "0.2.0", path = "crates/wesl" }
wesl-macros = { version = "0.2.0", path = "crates/wesl-macros" }
wgsl-parse = { version = "0.2.0", path = "crates/wgsl-parse" }
wgsl-types = { version = "0.2.0", path = "crates/wgsl-types" }

[workspace.lints.clippy]
# TODO: change eventually
mutable_key_type = "allow"

[workspace.lints.rust]

[patch.crates-io]
wesl = { path = "crates/wesl" }

# [patch.'https://github.com/wgsl-tooling-wg/bevy-wgsl']
# bevy-wgsl = { path = "../bevy-wgsl" }
