[workspace]
resolver = "3"
members = [
  "crates/tokrepr",
  "crates/tokrepr-derive",
  "crates/wesl",
  "crates/wesl-c",
  "crates/wesl-cli",
  "crates/wesl-macros",
  "crates/wesl-test",
  "crates/wesl-web",
  "crates/wgsl-parse",
  "crates/wgsl-types",
  "examples/buildrs_wesl",
  "examples/random_wgsl",
  "examples/runtime_wesl",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.87.0"
repository = "https://github.com/wgsl-tooling-wg/wesl-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokrepr = { path = "crates/tokrepr", version = "0.1.0" }
tokrepr-derive = { path = "crates/tokrepr-derive", version = "0.1.0" }
wesl = { path = "crates/wesl", version = "0.2.0" }
wesl-macros = { path = "crates/wesl-macros", version = "0.2.0" }
wgsl-parse = { path = "crates/wgsl-parse", version = "0.2.0" }
wgsl-types = { path = "crates/wgsl-types", version = "0.2.0" }

[workspace.lints.clippy]
# TODO: change eventually
mutable_key_type = "allow"

[workspace.lints.rust]

[patch.crates-io]
wesl = { path = "crates/wesl" }

# [patch.'https://github.com/wgsl-tooling-wg/bevy-wgsl']
# bevy-wgsl = { path = "../bevy-wgsl" }
