[package]
name = "reify"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
reify-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:reify-derive"]

[lints]
workspace = true
