[package]
name = "tokrepr"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "Turn Rust instances into token representations"
repository.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
tokrepr-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:tokrepr-derive"]
rc = []

[lints]
workspace = true
