[package]
name = "wesl-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C bindings for the WESL compiler"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wesl = { workspace = true }

[build-dependencies]
bindgen = "0.72"

[features]
eval = ["wesl/eval"]
generics = ["wesl/generics"]
naga = ["wesl/naga-ext"]

[lints]
workspace = true
