[package]
authors.workspace = true
default-run = "wesl"
description = "Various tools to parse, verify, evaluate and modify wgsl shader source."
documentation = "https://docs.rs/wesl-cli"
edition.workspace = true
license.workspace = true
name = "wesl-cli"
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
naga = { version = "24.0.0", optional = true, features = ["wgsl-in"] }
thiserror = "2.0.11"
wesl = { workspace = true, features = ["eval", "generics", "package"] }
wgsl-parse = { workspace = true }

[[bin]]
name = "wesl"
path = "src/main.rs"

[features]
default = ["naga"]

[lints]
workspace = true
