[package]
name = "wesl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI for the WESL compiler"
repository.workspace = true
license.workspace = true
default-run = "wesl"

[[bin]]
name = "wesl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
naga = { version = "26.0.0", features = ["wgsl-in"], optional = true }
thiserror = "2.0.11"
wesl = { workspace = true, features = ["eval", "generics", "package"] }
wgsl-parse = { workspace = true }

[features]
default = ["naga"]
naga = ["dep:naga", "wesl/naga-ext"]

[lints]
workspace = true
