[package]
name = "wesl-macros"
description = "Macros for the WESL rust compiler"
documentation = "https://docs.rs/wesl-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wgsl-parse = { workspace = true, features = ["wesl", "tokrepr"] }
itertools = "0.14.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"
proc-macro-error = "1.0.4"
token_stream_flatten = "0.1.0"

[lib]
proc-macro = true

[lints]
workspace = true
