[package]
name = "wesl-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Macros for the WESL rust compiler"
documentation = "https://docs.rs/wesl-macros"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro-error2 = { version = "2.0.1", optional = true }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"
token_stream_flatten = { version = "0.1.0", optional = true }
wgsl-parse = { workspace = true, features = ["tokrepr", "wesl"] }

[features]
query = []
quote = ["dep:proc-macro-error2", "dep:token_stream_flatten"]

[lints]
workspace = true
