[package]
name = "wesl-quote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Write WESL code inline with quote macros"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro-error2 = { version = "2.0.1" }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"
token_stream_flatten = { version = "0.1.0" }
wgsl-parse = { workspace = true, features = ["tokrepr", "wesl"] }

[dev-dependencies]
wesl = { workspace = true } # for unit tests

[lints]
workspace = true
