[package]
name = "wesl-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.11.1"

[dev-dependencies]
libtest-mimic = "0.8.1"
serde_json = "1.0.140"
wgsl-parse = { workspace = true }
wesl = { workspace = true, features = ["eval", "naga_ext"] }
bevy-wgsl = { git = "https://github.com/wgsl-tooling-wg/bevy-wgsl", rev = "d2504a1bcc2bca9511fcbf2ac407793056ff02c8" }

[lints]
workspace = true

[[test]]
name = "testsuite"
harness = false
