[package]
name = "wesl-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[test]]
harness = false
name = "testsuite"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
bevy-wgsl = { git = "https://github.com/wgsl-tooling-wg/bevy-wgsl", rev = "5ed0b02042dee10ea392e87f7a8b848b234724be" }
libtest-mimic = "0.8.1"
serde_json = "1.0.140"
wesl = { workspace = true, features = ["eval", "naga-ext"] }
wgsl-parse = { workspace = true }

[lints]
workspace = true
