[package]
name = "wesl-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WESL compiler in WebAssembly"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ansi-to-html = { version = "0.2.2", optional = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", features = ["color"], optional = true }
log = "0.4.22"
naga = { version = "26.0.0", features = [
  "wgsl-in",
  "wgsl-out",
], optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_bytes = "0.11.15"
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.11"
tsify = { version = "0.5.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.95"
wesl = { workspace = true, features = ["eval", "serde"] }

[features]
default = ["ansi-to-html", "naga"]
debug = ["console_error_panic_hook", "console_log"]

[lints]
workspace = true
