[package]
name = "wgsl-parse"
description = "Parse a wgsl source file to a syntax tree"
documentation = "https://docs.rs/wgsl-parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets = "0.11.4"
derive_more = { version = "2.0.1", features = [
    "as_ref",
    "constructor",
    "deref",
    "deref_mut",
    "from",
    "is_variant",
    "try_unwrap",
    "unwrap",
] }
itertools = "0.14.0"
lalrpop-util = "0.22.1"
lexical = { version = "7.0.4", features = ["format", "power-of-two"] }
logos = "0.15.0"
serde = { version = "1.0.215", optional = true, features = ["derive", "rc"] }
thiserror = "2.0.12"

# for feature "reify"
reify = { workspace = true, optional = true }

[build-dependencies]
lalrpop = { version = "0.22.1", default-features = false }

[features]
default = []

wesl = ["imports", "condcomp"]

# allow attributes on most declarations and statements.
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/ConditionalTranslation.md#appendix-updated-grammar
attributes = []

# allow templates on function declarations
# reference: none yet
templates = []

# reference: none yet
generics = ["attributes"]

# conditional translation attribute (@if).
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/ConditionalTranslation.md
condcomp = ["attributes"]

# import declarations.
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/Imports.md
imports = []

# allow naga/wgpu extensions.
# listed here: https://github.com/gfx-rs/wgpu/issues/4410
# more here: https://github.com/gfx-rs/wgpu/blob/b93b55920a978ef9f013efe8d75cb10e69488629/naga/src/valid/mod.rs#L83
naga_ext = ["push_constant"]
push_constant = []

reify = ["dep:reify"]

[lints]
workspace = true
