[package]
name = "wgsl-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Parse a wgsl source file to a syntax tree"
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
annotate-snippets = "0.12.4"
derive_more = { version = "2.0.1", features = [
  "as_ref",
  "constructor",
  "deref",
  "deref_mut",
  "from",
  "is_variant",
  "try_unwrap",
  "unwrap",
] }
itertools = "0.14.0"
lalrpop-util = "0.22.1"
lexical = { version = "7.0.4", features = ["format", "power-of-two"] }
logos = "0.16.0"
serde = { version = "1.0.215", features = ["derive", "rc"], optional = true }
thiserror = "2.0.12"
tokrepr = { workspace = true, optional = true }
wgsl-types = { workspace = true }

[dev-dependencies]
expect-test = "1.5.1"

[build-dependencies]
lalrpop = { version = "0.22.1", default-features = false }
lelwel = { git = "https://github.com/0x2a-42/lelwel.git", version = "0.10.0" }

[features]
default = []
# allow attributes on most declarations and statements.
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/ConditionalTranslation.md#appendix-updated-grammar
attributes = []
# conditional translation attribute (@if).
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/ConditionalTranslation.md
condcomp = ["attributes"]
# reference: none yet
generics = ["attributes"]
# import declarations.
# reference: https://github.com/wgsl-tooling-wg/wesl-spec/blob/main/Imports.md
imports = []
# See crates/wesl/Cargo.toml
naga-ext = ["wgsl-types/naga-ext"]
serde = ["dep:serde", "wgsl-types/serde"]
# allow templates on function declarations
# reference: none yet
templates = []
tokrepr = ["dep:tokrepr", "wgsl-types/tokrepr"]
wesl = ["condcomp", "imports"]

[lints]
workspace = true
