[package]
name = "package_wesl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]

[build-dependencies]
random_wgsl = { path = "../random_wgsl" }
wesl = { workspace = true }
wesl-quote = { workspace = true }

[lints]
workspace = true
