[package]
name = "buildrs_wesl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Running WESL at build-time"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]

[build-dependencies]
random_wgsl = { path = "../random_wgsl" }
wesl = { workspace = true }

[lints]
workspace = true
