[package]
name = "dependency-resolution"
version = "0.1.0"
edition = "2024"

[workspace]
# members = ["a", "b", "c1", "c2", "d2", "d2"]

# [workspace.dependencies]
# wesl = { path = "../../crates/wesl" }

[dependencies]
a = { path = "./a" }
b = { path = "./b" }
wesl = { path = "../../crates/wesl", features = ["eval", "package"] }

[patch.crates-io]
c1 = { path = "./c1", package = "c" }
c2 = { path = "./c2", package = "c" }
d1 = { path = "./d1", package = "d" }
d2 = { path = "./d2", package = "d" }
