[package]
name = "random_wgsl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Random utility package for WGSL/WESL"
documentation = "https://docs.rs/random_wgsl"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
wesl = { workspace = true }

[build-dependencies]
wesl = { workspace = true, features = ["package"] }

[lints]
workspace = true
