[package]
name = "runtime_wesl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Running WESL at runtime"
documentation = "https://docs.rs/runtime_wgsl"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
random_wgsl = { path = "../random_wgsl" }
wesl = { workspace = true }

[lints]
workspace = true
